# cxedit

./: CMakeLists.txt  README.md  main.cpp
core/: actions.cpp  actions.h  editor.cpp  editor.h
data/: editmem.cpp  editmem.h  piecetable.h
